@@ -51,7 +51,7 @@ typedef struct commandHandler
 #define MAX_USER_CMD			4
 #define MAX_ENABLE_CMD			5
 #define MAX_CONF_CMD			7
-#define MAX_CONF_IF_CMD 		6
+#define MAX_CONF_IF_CMD 		7
 #define MAX_CONF_FW_CMD			6
 #define MAX_CONF_RD_CMD			2
 #define MAX_CONF_ACL_CMD		4
