@@ -90,7 +90,7 @@ char* calc_mask_from_cidr(char* cidr)
 	return inet_ntoa(_mask);
 }
 
-short unsigned int is_valid_mask(char* mask)
+unsigned short is_valid_mask(char* mask)
 {
 	struct in_addr _mask;
 	unsigned long __mask;
@@ -124,16 +124,17 @@ unsigned int calc_num_network(unsigned int IP,unsigned int mask)
 
 uint8_t is_valid_ip(char* ip)
 {
-	if(regexp(ip,"^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])$") == 0)
-		return 0;
-	return 1;
+	return regexp(ip,"^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])$");
 }
 
 uint8_t is_valid_ip_and_cidr(char* str)
 {
-	if(regexp(str,"^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])((/([0-9]|[1-2][0-9]|3[0-2]))?)$") == 0)
-		return 0;
-	return 1;
+	return regexp(str,"^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])\.(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9][0-9]|[0-9])((/([0-9]|[1-2][0-9]|3[0-2]))?)$");
+}
+
+uint8_t is_valid_macaddr(char* str)
+{
+	return regexp(str,"^([0-9a-f]{2}([:]|$)){6}$");
 }
 
 uint32_t convert_ip_to_int(char* ip)
