@@ -1,5 +1,5 @@
 /*
-* Copyright (c) 2011-2012, Frost Sapphire Studios
+* Copyright (c) 2011-2012, Loïc BLOT, CNRS
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
@@ -9,7 +9,7 @@
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
-*     * Neither the name of the Frost Sapphire Studios nor the
+*     * Neither the name of the BSDRouterd nor the
 *       names of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written permission.
 *
@@ -68,11 +68,11 @@ int main(int argc, const char** argv)
 		is_loading = 0;
 
 		// Now we daemonize
-		/*pid_t pid = fork();
+		pid_t pid = fork();
 		if(pid < 0)
 			printf("\x1b[31mFATAL Fork Error !\x1b[0m !\n");
 		else if(pid > 0)
-			return 0;*/
+			return 0;
 
 		waitAndHandleClients();
 		closeServerSocket();
